updates to front end and back end

--- a/src/static/templates/index.html
+++ b/src/static/templates/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <!-- Latest compiled and minified bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <title>Creating a Full-Stack Python Application with NPM, React.js and Webpack</title>
+    <title>Bughouse</title>
 </head>
 
 <body>
     <div id="content" />
-    <script src="dist/bundle.js" type="text/javascript"></script>
+    <script src="../dist/index.bundle.js" type="text/javascript"></script>
+    <h2>Testing</h2>
 </body>
 
 </html>
