--- a/src/static/templates/index.html
+++ b/src/static/templates/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <div id="content" />
-    <script src="../dist/index.bundle.js" type="text/javascript"></script>
-    <h2>Testing</h2>
+    <script src="../dist/index-bundle.js" type="text/javascript"></script>
 </body>
 
 </html>
