--- a/src/static/templates/login.html
+++ b/src/static/templates/login.html
@@ -6,7 +6,6 @@
 </head>
 <body>
     <div id = "content"></div>
-    <script src="../dist/login.bundle.js" type="text/javascript"></script>
-    <h1>Test</h1>
+    <script src="../dist/login-bundle.js" type="text/javascript"></script>
 </body>
 </html>
