--- a/src/static/css/GameCardView.css
+++ b/src/static/css/GameCardView.css
@@ -1,4 +1,7 @@
-tr:nth-child(even) {
-    background-color: transparent;
+table{
+    padding: 10px;
 }
 
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
