--- a/src/static/templates/index.html
+++ b/src/static/templates/index.html
@@ -13,4 +13,7 @@
     <script src="../dist/index-bundle.js" type="text/javascript"></script>
 </body>
 
+<script type="text/javascript">
+    var user = JSON.parse("{{user|tojson|safe}}");
+</script>
 </html>
